stickbits working, but need to fix z-index

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -345,10 +345,10 @@
 
 
 .sticky {
-    padding-top: 85.6px;
+    //padding-top: 85.6px;
 
     #sort_categories_parent {
-        position: fixed;
+        position: sticky;
         top: 0;
         left: 0;
         right: 0;
